# assistonauts

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: product-reviewer.md
.claude/commands/: change.md  handoff.md  manual.md  start-phase.md
docs/: ARCHITECTURE.md  PHASE_STATUS.md  REQUIREMENTS.md  assistonauts-spec.md  orchestration-flow.md
docs/manual/: task-2026-04-07-001-output.html  task-2026-04-07-001.md  task-2026-04-07-002.md  task-2026-04-08-001.md  task-2026-04-08-001.sh  task-2026-04-08-002.md  task-2026-04-08-002.sh  task-2026-04-09-003.sh  task-2026-04-09-004.sh
docs/sessions/: session-2026-04-07-002.md  session-2026-04-08-003.md  session-2026-04-08-004.md  session-2026-04-08-005.md  session-2026-04-08-006.md  session-2026-04-09-001.md  session-2026-04-09-002.md  session-2026-04-09-003.md  session-2026-04-09-004.md  session-2026-04-09-005.md  session-2026-04-10-001.md  session-2026-04-10-002.md  session-2026-04-13-001.md
docs/uat/: phase-5-uat.sh
sandbox/: Dockerfile  entrypoint.sh  init-firewall.sh
src/assistonauts/: __main__.py
tests/: conftest.py  helpers.py
tests/contract/: test_compiler_output.py  test_explorer_output.py  test_scout_output.py
tests/unit/: test_archivist_db.py  test_archivist_service.py  test_base_agent.py  test_budget_integration.py  test_bugfix_absolute_paths.py  test_bugfix_compiler_sources_prompt.py  test_bugfix_index_summaries.py  test_build_orchestrator.py  test_captain_agent.py  test_captain_tools.py  test_cli_expedition.py  test_cli_index_curate.py  test_cli_mission.py  (+46 more)
(+77 files in other folders)
